# zera

./: .env.example  .gitignore  README.md  compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
contract/: package.json  tsconfig.json
contract/src/: index.ts  main.compact
contracts/: .env.example  README.md  index.ts  main.compact  package.json
contracts/src/: config.ts  deploy.ts  wallet.ts  witness.ts
contracts/test/: hw.test.ts
docs/: ARCHITECTURE.md  CREATE_ASSET_FLOW.md  DEVELOPMENT_AND_DEPLOYMENT.md  FRONTEND_AND_API_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING.md  PROTOCOL_AND_PRIVACY.md  SETUP.md  SMART_CONTRACT_DEEP_DIVE.md
prisma/: schema.prisma
scripts/: check-node.mjs  clean.mjs
src/: config.ts  deploy.ts  providers.ts  wallet.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AppShell.tsx  Navbar.tsx  Sidebar.tsx  ThemeSwitch.tsx  TopBar.tsx
src/data/: mockData.ts
src/hooks/: useAssets.ts  useCollections.ts  useUpload.ts  useWallet.ts
src/lib/: midnight-wallet.ts  mockBackend.ts  prisma.ts
src/server/: index.ts
src/services/: api.ts  assets.ts  contracts.ts  ipfs.ts  marketplace.ts
src/store/: appStore.ts
storage/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
storage/ipfs/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  render.yaml
storage/ipfs/src/: handlers.rs  ipfs.rs  main.rs  models.rs
web/: .env.example  README.md  next.config.mjs  package.json  prisma.config.ts  tailwind.config.ts  tsconfig.json
(+118 files in other folders)
