[package]
name = "zera-ipfs"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tower = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
